adding uuid script in index.html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<p>Created by Oscar Godson</p>
 			<p>Refactored by Christoph Burgmer</p>
 		</footer>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"></script>
 		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="node_modules/clientside-require/dist/bundle.js"></script>
 		<script src="js/helpers.js"></script>
 		<script src="js/store.js"></script>
 		<script src="js/model.js"></script>
