--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>To-do list app</title>
-		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
-		<link rel="stylesheet" href="./test.css">
+		<link rel="stylesheet" href="./index.css">
 	</head>
 	<body>
 		<section class="todoapp">
@@ -39,7 +38,6 @@
 			<p>Refactored by Christoph Burgmer</p>
 		</footer>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"></script>
-		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/helpers.js"></script>
 		<script src="js/store.js"></script>
 		<script src="js/model.js"></script>
